--- a/server/release/dash.colarietitosti.info.conf
+++ b/server/release/dash.colarietitosti.info.conf
@@ -28,9 +28,15 @@ server {
         }
 
         location /jupyter {
-                proxy_set_header X-Real-IP  $remote_addr;
-                proxy_set_header X-Forwarded-For $remote_addr;
-                proxy_set_header Host $host;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header Host $http_host;
+                proxy_http_version 1.1;
+                proxy_redirect off;
+                proxy_buffering off;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "upgrade";
+                proxy_read_timeout 86400;
                 proxy_pass  https://[<NewIP>]:89;
                 proxy_redirect off;
         }
